Removed COSArrayList.java